--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -2,12 +2,12 @@
 <section>
   <h2>Your Posts</h2>
     {{#each posts as |post|}}
-      {{> dashboard-postinfo post}}
+      {{> post-info post}}
     {{/each}}
 
 </section>
 {{/if}}
 
-<button type="submit" class="btn"><a class="link" href="/dashboard/new">+ New Post</a></button>
+<button type="submit" class="btn"><a class="link" href="/dashboard/new">Add New Post</a></button>
 
 <script src="/javascript/add-post.js"></script>
