--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -10,4 +10,17 @@
 
 <button type="submit" class="btn"><a class="link" href="/dashboard/new">Add New Post</a></button>
 
+{{#if posts.length}}
+<section>
+  <h2>Your Posts</h2>
+    {{#each posts as |post|}}
+    <div>
+      {{> post-info post}}
+      <a href="/dashboard/edit/{{post.id}}" class="edit-link">Edit post</a>
+       <a href="/dashboard/delete/{{post.id}}" class="edit-link">Delete post</a>
+    </div>
+    {{/each}}
+</section>
+{{/if}}
+
 <script src="/javascript/add-post.js"></script>
