--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -3,19 +3,18 @@
   <h2>
     Edit Post
   </h2>
-  <form class="edit-post-form">
+  <form class="edit-post-form" method="PUT" action="/api/posts/{{post.id}}">
     <div>
       <input name="post-title" type="text" value="{{post.title}}" />
     </div>
     <div>
-      <textarea id="post-contents" name="post-contents">{{post.post_contents}}</textarea>
+      <textarea id="post-contents" name="content">{{post.content}}</textarea>
     </div>
     <div>
       posted by you on
       {{format_date post.created_at}}
       |
-      <a href="/post/{{post.id}}">{{post.comments.length}}
-        {{format_plural "comment" post.comments.length}}</a>
+      <a href="/post/{{post.id}}">{{post.comments.length}}</a>
     </div>
     <button type="submit">Save post</button>
     <button type="button" class="delete-post-btn">Delete post</button>
