--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,16 +1,14 @@
-    <div class="card">
+<div class="card">
       <h3 class="card-header">Sign Up</h3>
-      <form id="signup-form" class="card-body">
+      <form id="signup-form" class="card-body" method="POST" action="/api/users/">
         <label for="username-signup" class="form-label">Username</label>
-        <input id="username-signup" type="text" class="form-input" />
+        <input id="username-signup" type="text" class="form-input"  name="username" />
 
 
         <label class="form-label" for="password-signup">Password</label>
-        <input  id="password-signup" type="password" class="form-input" />
+        <input  id="password-signup" type="password" class="form-input" name="password" />
 
         <button type="submit" class="btn">Signup Here</button>
         <a class="login-link" href="/login">Log in Here</a>
       </form>
     </div>
-
-<script src="/javascript/signup.js"></script>
