--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,9 @@
 <article class="post">
 
     {{#each posts as |post| }}
-        {{> post-info post}}
+        <div class="card">
+            {{> post-info post}}
+        </div>
     {{/each}}
 
 </article>
