--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,4 +1,4 @@
-<div class="card">
+<div>
     <div class="card-header">
        <h4><a class="link" href="/post/{{id}}">{{title}}</a></h4>
         <p>Posted by {{user.username}} on {{format_date created_at}}</p>
