--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,7 +25,7 @@
 
           
       </header>
-    <h1 class="app-title"><i class="fab "></i>The Tech Blog</h1>
+    <h1 class="app-title"><i class="fab "></i>Your Tech Blog</h1>
     <main>
       {{{ body }}}
     </main>
